@@ -2,6 +2,7 @@ omweather (0.24.4) unstable; urgency=low
 
   * Various minor fixes
   * Fixed bug #5083 "Remove/hide mnemonics for buttons"
+  * Fixed bug #5804 '"Source" should default to "weather.com" if  no other providers available'
 
  -- Vlad Vasiliev <vlad@gas.by>  Thu, 17 Sep 2009 11:20:10 +0200
 
